not sure what im doing

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,10 @@
 </head>
 <body>
 	<header>
-	<a class="logo" href="https://jitachi.up.railway.app/">Jitachi Debug</a>
+	<a class="logo" href="https://jitachi.up.railway.app/">
+    Jitachi Debug
+    <p>Software Designer</p>
+  </a>
 	
 </header>
 
