--- a/public/index.html
+++ b/public/index.html
@@ -16,15 +16,24 @@
     Jitachi Garcia
   </a>
 	
+	<nav>
+		<ul>
+			
+			<li><a href="/about">About</a></li>
+			
+		</ul>
+	</nav>
+	
 </header>
 
-  <div class="hero">
+	
+	
+  <main>
+    <div class="hero">
   Hello, I'm Jitachi. <br>
   Software Designer at <a href="http://railway.app">Railway.</a><br>
   Curious and stubborn.
 </div>
-	
-	<main>
 		
 		
 			<article>
@@ -67,9 +76,6 @@
 	</main>
 
 
-	<footer>
-	<p>&copy; 2024 <a href="https://jitachi.up.railway.app/">Jitachi Garcia</a></p>
-</footer>
-
+	
 </body>
 </html>
