I think it was an underscore

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -7,7 +7,7 @@
 	
 	
 	<link rel="stylesheet" href="/css/style.css">
-	
+	<link rel="alternate" type="application/rss+xml" href="/about/index.xml" title="Jitachi Development">
 </head>
 <body>
 	<header>
