--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 	<nav>
 		<ul>
 			
-			<li><a href="/about">About</a></li>
+			<li><a href="/about/">About</a></li>
 			
 			<li><a href="/posts/">Posts</a></li>
 			
