--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,14 @@
     Jitachi Development
   </a>
 	
+	<nav>
+		<ul>
+			
+			<li><a href="/about/">about hugo</a></li>
+			
+		</ul>
+	</nav>
+	
 </header>
 
 	
