bunch of changes

--- a/public/work/index.html
+++ b/public/work/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
 	<header>
-	<a class="logo h-stack" href="https://hugo-staging.up.railway.app/">
-    <img class="profile" src="https://hugo-staging.up.railway.app/img/avatar.png">
+	<a class="logo h-stack" href="https://jitachi.up.railway.app/">
+    <img class="profile" src="https://jitachi.up.railway.app/img/avatar.png">
     
   </a>
 
@@ -36,9 +36,12 @@
 
 <div class="container long-form">
   <h1 id="railway">Railway</h1>
-<h1 id="rainforest">Rainforest</h1>
-<h1 id="postman">Postman</h1>
-<h1 id="kong">Kong</h1>
+<img src="assets/railway.png" alt="image alt test"><h1 id="rainforest">Rainforest</h1>
+<img src="assets/rainforest.png" alt="image alt test"><h1 id="kong">Kong</h1>
+<h2 id="insomnia">Insomnia</h2>
+<img src="assets/insomnia.png" alt="image alt test"><h2 id="galileo">Galileo</h2>
+<h2 id="gelato">Gelato</h2>
+<h2 id="marketplace">Marketplace</h2>
 <p>Before DevTools, I did a bunch of other things:</p>
 
 </div>
