--- a/public/about/index.html
+++ b/public/about/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
 	<header>
-	<a class="logo h-stack" href="https://hugo-staging.up.railway.app/">
-    <img class="profile" src="https://hugo-staging.up.railway.app/img/avatar.png">
+	<a class="logo h-stack" href="https://jitachi.up.railway.app/">
+    <img class="profile" src="https://jitachi.up.railway.app/img/avatar.png">
     
   </a>
 
@@ -36,8 +36,7 @@
 
 <div class="container long-form">
   <p>Hello, I&rsquo;m  Jitachi. Friendly software designer from México.</p>
-<!-- raw HTML omitted -->
-
+<p class="large">This is a test</p>
 </div>
 
 
