whoops I did it again

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -35,8 +35,11 @@
 	
 
 <div class="container long-form">
-  <p>Hello, I&rsquo;m  Jitachi. Friendly software designer from México.</p>
-<p class="large">This is a test</p>
+  <p class="large">I am Jitachi, a product designer made of curiosity, stubbornness, and a hint of foolishness, per Professor Utonium's words.</p>
+<p>I grew up with ultra strong and relentless kids traveling on clouds with monkey tails that would make them go nuts. Of course I had a great example of what was expected from me.</p>
+<p>I had to <del>go monkey nuts</del> be great.</p>
+<p>![image alt test](images/jitachi.jpg class=&ldquo;img&rdquo;)</p>
+
 </div>
 
 
