one more about iteration

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -36,9 +36,14 @@
 
 <div class="container long-form">
   <p class="large">I am Jitachi, a product designer made of curiosity, stubbornness, and a hint of foolishness, per Professor Utonium's words.</p>
-<p>I grew up with ultra strong and relentless kids traveling on clouds with monkey tails that would make them go nuts. Of course I had a great example of what was expected from me.</p>
+<img src="images/jitachi.jpg" alt="image alt" class="inline-img"><p>I grew up with ultra strong and relentless kids traveling on clouds with monkey tails that would make them go nuts. Of course I had a great example of what was expected from me.</p>
 <p>I had to <del>go monkey nuts</del> be great.</p>
-<p>![image alt test](images/jitachi.jpg class=&ldquo;img&rdquo;)</p>
+<h5 id="work-experience">Work Experience</h5>
+<p class="row sans"> Founding Designer at Railway / <span class="subtle"> 2021 - (Current) </span></p>
+<p class="row sans"> Senior Designer at Rainforest / 2020 - 2021 </p>
+<p class="row sans"> Founding Designer at Kong, Inc / 2015 - 2020 </p>
+<h5 id="misc">Misc</h5>
+<p>I like Japan.</p>
 
 </div>
 
