lil work on work

--- a/public/work/index.html
+++ b/public/work/index.html
@@ -34,18 +34,18 @@
 
 	
 
-<div class="container long-form">
-  <h2 id="railway">Railway</h2>
+<div class="container">
+  <h1 id="railway">Railway</h1>
 <p>I work at Railway since 2021, almost 3 years this year. I work at Railway since 2021, almost 3 years this year. I work at Railway since 2021, almost 3 years this year. I work at Railway since 2021, almost 3 years this year. I work at Railway since 2021, almost 3 years this year.</p>
-<img src="assets/railway.png" alt="image alt test"><h2 id="rainforest">Rainforest</h2>
-<p>Rainforest as a visual QA platform. I helped building the editor.</p>
-<img src="assets/rainforest.png" alt="image alt test"><hr>
-<h2 id="kong">Kong</h2>
-<h3 id="insomnia">Insomnia</h3>
-<p>I work at Railway since 2021, almost 3 years this year.</p>
-<img src="assets/insomnia.png" alt="image alt test"><h3 id="galileo">Galileo</h3>
-<h3 id="gelato">Gelato</h3>
-<h3 id="marketplace">Marketplace</h3>
+<img src="assets/railway.png" alt="image alt test"><p>Rainforest as a visual QA platform. I helped building the editor.</p>
+<h1 id="rainforest">Rainforest</h1>
+<img src="assets/rainforest.png" alt="image alt test"><h1 id="kong">Kong</h1>
+<h2 id="insomnia">Insomnia</h2>
+<p>I work at Railway since 2021, almost 3 years this year.
+<img src="assets/insomnia.png" alt="image alt test"></p>
+<h2 id="galileo">Galileo</h2>
+<h2 id="gelato">Gelato</h2>
+<h2 id="marketplace">Marketplace</h2>
 <p>Before DevTools, I did a bunch of other things:</p>
 
 </div>
