more responsive optimizations

--- a/content/_index.html
+++ b/content/_index.html
@@ -1,6 +1,5 @@
 ---
 title: "Home"
-Description: "Making the Complex Simple and Easy to Understand!"
-layout: 'about'
-<!-- menu: main -->
+Description: "none"
+layout: "baseof"
 ---
