--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" href="/css/style.css">
 	<link rel="alternate" type="application/rss+xml" href="/index.xml" title="Jitachi Garcia">
 </head>
-<body class="p-12">
+<body class="p-8 md:p-12">
 	<header class="flex items-center gap-3">
 	<a class="logo" href="https://jitachi.up.railway.app/">
     <img class="w-9 min-w-9 rounded-full border border-white" src="https://jitachi.up.railway.app/img/avatar.png">
