reduced content in about, moved work to template hardcoded content

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -38,14 +38,15 @@
 
 <div class="container long-form">
   <p class="large">I am Jitachi, a product designer made of curiosity, stubbornness, and a hint of foolishness, per Professor Utonium's words.</p>
-<img src="images/jitachi.jpg" alt="image alt" class="inline-img"><p>I grew up with ultra strong and relentless kids traveling on clouds with monkey tails that would make them go nuts. Of course I had a great example of what was expected from me.</p>
-<p>I had to <del>go monkey nuts</del> be great.</p>
-<h4 id="work-experience">Work Experience</h4>
+<img src="images/jitachi.jpg" alt="image alt" class="inline-img"><!-- #### Work Experience
+
 <p class="row sans"> Founding Designer at Railway / <span class="subtle"> 2021 - (Current) </span></p>
 <p class="row sans"> Senior Designer at Rainforest / 2020 - 2021 </p>
 <p class="row sans"> Founding Designer at Kong, Inc / 2015 - 2020 </p>
-<h4 id="misc">Misc</h4>
-<p>I like Japan.</p>
+
+#### Misc
+
+I like Japan. -->
 
 </div>
 
