--- a/public/work/index.html
+++ b/public/work/index.html
@@ -37,19 +37,38 @@
 	
 
 <div class="container">
-  <h1 id="railway">Railway</h1>
-<p>I work at Railway since 2021, almost 3 years this year. I work at Railway since 2021, almost 3 years this year. I work at Railway since 2021, almost 3 years this year. I work at Railway since 2021, almost 3 years this year. I work at Railway since 2021, almost 3 years this year.</p>
-<img src="assets/railway.png" alt="image alt test"><p>Rainforest as a visual QA platform. I helped building the editor.</p>
-<h1 id="rainforest">Rainforest</h1>
-<img src="assets/rainforest.png" alt="image alt test"><h1 id="kong">Kong</h1>
-<h2 id="insomnia">Insomnia</h2>
-<p>I work at Railway since 2021, almost 3 years this year.
-<img src="assets/insomnia.png" alt="image alt test"></p>
-<h2 id="galileo">Galileo</h2>
-<h2 id="gelato">Gelato</h2>
-<h2 id="marketplace">Marketplace</h2>
-<p>Before DevTools, I did a bunch of other things:</p>
+  <!-- <section>
+<h1>Railway</h1>
+<p class="mb-12">I work at Railway since 2021, almost 3 years this year. I work at Railway since 2021, almost 3 years this year. I work at Railway since 2021, almost 3 years this year. I work at Railway since 2021, almost 3 years this year. I work at Railway since 2021, almost 3 years this year.</p>
 
+![image alt test](assets/railway.png)
+
+</section>
+
+Rainforest as a visual QA platform. I helped building the editor.
+
+# Rainforest
+
+![image alt test](assets/rainforest.png)
+
+# Kong
+
+## Insomnia
+
+I work at Railway since 2021, almost 3 years this year.
+![image alt test](assets/insomnia.png)
+
+## Galileo
+
+## Gelato
+
+## Marketplace
+
+Before DevTools, I did a bunch of other things: -->
+
+
+  <h2 class="mb-8">Railway</h2>
+  <img class="rounded-lg" src="https://jitachi.up.railway.app/work/railway.png" />
 </div>
 
 
