--- a/public/work/index.html
+++ b/public/work/index.html
@@ -13,8 +13,8 @@
 </head>
 <body class="p-8 md:p-12">
 	<header class="flex items-center gap-3">
-	<a class="logo" href="https://jitachi.up.railway.app/">
-    <img class="w-9 min-w-9 rounded-full border border-white" src="https://jitachi.up.railway.app/img/avatar.png">
+	<a class="logo" href="https://jitachi.com/">
+    <img class="w-9 min-w-9 rounded-full border border-white" src="https://jitachi.com/img/avatar.png">
     
   </a>
 
@@ -68,7 +68,7 @@ Before DevTools, I did a bunch of other things: -->
 
 
   <h2 class="mb-8">Railway</h2>
-  <img class="rounded-lg" src="https://jitachi.up.railway.app/work/railway.png" />
+  <img class="rounded-lg" src="https://jitachi.com/work/railway.png" />
 </div>
 
 
