polished couple of views, including a more decent hero

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -121,7 +121,7 @@
 
 <div class="long-form py-[8vw]"><p class="large">I am Jitachi, a product designer made of curiosity, stubbornness, and a hint of foolishness, per Professor Utonium's words.</p>
 <img src="images/jitachi.jpg" alt="image alt" class="inline-img"><h6 id="currently">Currently</h6>
-<div class="flex flex-col mx-auto max-w-[800px] justify-between border-t border-[var(--color-border-light)] p-4">
+<div class="flex flex-col mx-auto max-w-[var(--content-width)] justify-between border-t border-[var(--color-border-light)] p-4">
     <div class="flex justify-between">
         <div>
             <div>Founding Designer at <a href="https://rainforestqa.com">Railway</a></div>
@@ -132,42 +132,42 @@
     <p>Since 2021, I've been poured my heart and soul into Railway—a modern software deployment and observability platform—as the founding designer.</p>
 </div>
 <h6 id="before">Before</h6>
-<div class="flex mx-auto max-w-[800px] justify-between border-t border-[var(--color-border-light)] p-4">
+<div class="flex mx-auto max-w-[var(--content-width)] justify-between border-t border-[var(--color-border-light)] p-4">
     <div>
         <div>Sr Product Designer at <a href="https://rainforestqa.com">Rainforest</a></div>
         <div class="text-lg text-gray-500">Automated Software QA</div>
     </div>
     <div>2019-2021</div>
 </div>
-<div class="flex mx-auto max-w-[800px] justify-between border-t border-[var(--color-border-light)] p-4">
+<div class="flex mx-auto max-w-[var(--content-width)] justify-between border-t border-[var(--color-border-light)] p-4">
     <div>
         <div>Founding Designer at Kong</div>
         <div class="text-lg text-gray-500">Enterprise-grade API Tooling</div>
     </div>
     <div>2019-2021</div>
 </div>
-<div class="flex mx-auto max-w-[800px] justify-between border-t border-[var(--color-border-light)] p-4">
+<div class="flex mx-auto max-w-[var(--content-width)] justify-between border-t border-[var(--color-border-light)] p-4">
     <div>
         <div>Product Designer at Corpfolder</div>
         <div class="text-lg text-gray-500">Mexico-specific Accountability Software</div>
     </div>
     <div>2019-2021</div>
 </div>
-<div class="flex mx-auto max-w-[800px] justify-between border-t border-[var(--color-border-light)] p-4">
+<div class="flex mx-auto max-w-[var(--content-width)] justify-between border-t border-[var(--color-border-light)] p-4">
     <div>
         <div>Interaction Designer at Freshout</div>
         <div class="text-lg text-gray-500">RIP. Mexico-specific Accountability Software</div>
     </div>
     <div>2019-2021</div>
 </div>
-<div class="flex mx-auto max-w-[800px] justify-between border-t border-[var(--color-border-light)] p-4">
+<div class="flex mx-auto max-w-[var(--content-width)] justify-between border-t border-[var(--color-border-light)] p-4">
     <div>
         <div>UI/UX Designer at NearBPO</div>
         <div class="text-lg text-gray-500">Agency work. Relevant clients included Apigee and CDMX Government.</div>
     </div>
     <div>2019-2021</div>
 </div>
-<div class="flex mx-auto max-w-[800px] justify-between border-t border-[var(--color-border-light)] p-4">
+<div class="flex mx-auto max-w-[var(--content-width)] justify-between border-t border-[var(--color-border-light)] p-4">
     <div>Co-owner/Designer at Mindarin</div>
     <div>2015-2020</div>
 </div>
