publish static files for photo section

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -35,6 +35,14 @@
           >About</a
         >
       
+        <a
+          class="p-2 px-4 text-base bg-[var(--color-bg-lightest)] transition ease-in-out duration-200 rounded-full 
+        "
+          href="/photos/"
+          title="Photos"
+          >Photos</a
+        >
+      
     </div>
   </div>
 
