--- a/public/about/index.html
+++ b/public/about/index.html
@@ -3,15 +3,19 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>About</title>
+	<title>About • Jitachi</title>
+
 	
 	
 	
 	
-	<link rel="stylesheet" href="/style.css">
-	
+	<link rel="stylesheet" href="/style.css">	
 	<link rel="stylesheet" href="/css/style.css">
-	
+
+	<link rel="shortcut icon" type="image/png" href="/favicon.svg">
+	<link rel="shortcut icon" sizes="192x192" href="/favicon.svg">
+	<link rel="apple-touch-icon" href="/favicon.svg">
+
 </head>
 <body>
 	<header class="flex items-center justify-between p-[8vw] md:py-[4vw]">
@@ -56,8 +60,10 @@
 
 
 <button id="theme-toggle">
-  <i id="sun-icon" class="fas fa-sun" style="display: none;"></i>
-  <i id="moon-icon" class="fas fa-moon"></i>
+  
+  
+  <p id="sun-icon" class="text-lg opacity-40" style="display: none;">light</p>
+  <p id="moon-icon" class="text-lg opacity-40">dark</p>
 </button>
 
 <script>
@@ -129,7 +135,7 @@
 
 	
 
-<div class="long-form py-[8vw]"><p class="large">I am Jitachi, a product designer made of curiosity, stubbornness, and a hint of foolishness, per Professor Utonium's words.</p>
+<div class="long-form p-[8vw]"><p class="large">I am Jitachi, a product designer made of curiosity, stubbornness, and a hint of foolishness, per Professor Utonium's words.</p>
 <img src="images/jitachi.jpg" alt="image alt" class="inline-img"><h6 id="currently">Currently</h6>
 <div class="flex flex-col mx-auto max-w-[var(--content-width)] justify-between border-t border-[var(--color-border-light)] p-4">
     <div class="flex justify-between">
@@ -184,7 +190,6 @@
 </div>
 
 
-	
 </body>
 </html>
 
