--- a/public/photos/index.html
+++ b/public/photos/index.html
@@ -3,15 +3,19 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Photos</title>
+	<title>Photos • Jitachi</title>
+
 	
 	
 	
 	
-	<link rel="stylesheet" href="/style.css">
-	
+	<link rel="stylesheet" href="/style.css">	
 	<link rel="stylesheet" href="/css/style.css">
-	<link rel="alternate" type="application/rss+xml" href="/photos/index.xml" title="Jitachi Garcia">
+
+	<link rel="shortcut icon" type="image/png" href="/favicon.svg">
+	<link rel="shortcut icon" sizes="192x192" href="/favicon.svg">
+	<link rel="apple-touch-icon" href="/favicon.svg">
+
 </head>
 <body>
 	<header class="flex items-center justify-between p-[8vw] md:py-[4vw]">
@@ -56,8 +60,10 @@
 
 
 <button id="theme-toggle">
-  <i id="sun-icon" class="fas fa-sun" style="display: none;"></i>
-  <i id="moon-icon" class="fas fa-moon"></i>
+  
+  
+  <p id="sun-icon" class="text-lg opacity-40" style="display: none;">light</p>
+  <p id="moon-icon" class="text-lg opacity-40">dark</p>
 </button>
 
 <script>
@@ -195,7 +201,6 @@
   </ul>
 </div>
 
-	
 </body>
 </html>
 
