--- a/public/index.html
+++ b/public/index.html
@@ -170,7 +170,7 @@
   class="flex flex-row border-b border-l border-black/5"
   data-category="Hardware"
 >
-  <a href="https://jitachi.com/posts/06-spacing-essay/" class="w-full">
+  <a href="https://jitachi.com/posts/06-spacing-essay/" class="w-full text-decoration-none">
     <article
       class="hover:bg-gray-100/50 transition-colors group relative w-full p-[6vw]"
     >
@@ -220,7 +220,7 @@
   class="flex flex-row border-b border-l border-black/5"
   data-category="Hardware"
 >
-  <a href="https://jitachi.com/posts/05-poop-pods/" class="w-full">
+  <a href="https://jitachi.com/posts/05-poop-pods/" class="w-full text-decoration-none">
     <article
       class="hover:bg-gray-100/50 transition-colors group relative w-full p-[6vw]"
     >
@@ -261,7 +261,7 @@
   class="flex flex-row border-b border-l border-black/5"
   data-category="Work"
 >
-  <a href="https://jitachi.com/posts/04-railway-metal/" class="w-full">
+  <a href="https://jitachi.com/posts/04-railway-metal/" class="w-full text-decoration-none">
     <article
       class="hover:bg-gray-100/50 transition-colors group relative w-full p-[6vw]"
     >
