remove default link color

--- a/public/index.html
+++ b/public/index.html
@@ -168,7 +168,7 @@
 
         <li
   class="flex flex-row border-b border-l border-black/5"
-  data-category="Hardware"
+  data-category="Lil-essays"
 >
   <a href="https://jitachi.com/posts/06-spacing-essay/" class="w-full no-underline">
     <article
@@ -180,7 +180,7 @@
       <div class="flex flex-row justify-between mb-6">
         
           <p class="opacity-45 text-[80%]">
-            #Hardware
+            #Lil-essays
           </p>
         
         <p class="opacity-45 text-[80%]">
