improve header paddings + layout improvements

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -167,8 +167,7 @@
 
     <div id="page-content">
       
-
-<div class="long-form p-[8vw]"><h2 id="hello-im-jitachi">Hello! I&rsquo;m Jitachi</h2>
+  <div class="long-form p-[8vw] pt-64"><h2 id="hello-im-jitachi">Hello! I&rsquo;m Jitachi</h2>
 <p>I like to study the relationship we have with the artifacts we create for ourselves, how they shape the way we think, and how they expand what we believe is possible.</p>
 <p>In simple terms, I&rsquo;m a <strong>designer</strong>. I&rsquo;ve been obsessed with technology, magic, and modding my surroundings since I was a kid. Creating artifacts to help others move forward is my love language.</p>
 <p>I believe that anything a human creates carries traces of its maker: the imprint of time, culture, beliefs, intention, and values. It&rsquo;s like an asynchronous conversation: you can sense what they considered, highlighted, and ignored.</p>
@@ -228,7 +227,6 @@
     <div>2005-2010</div>
 </div>
 </div>
-
 
     </div>
 
