update margin/alignment styles

--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
     <link rel="apple-touch-icon" href="/favicon.svg" />
   </head>
   <body>
-    <div class="fixed top-0 left-0 right-0 z-50 px-[4vw] py-[4vw]">
+    <div class="sticky top-0 left-0 z-50 px-[4vw] py-[4vw]">
       <header class="flex items-center justify-between">
   <div
     class="glass-container flex items-center gap-2 py-3 px-4 rounded-full relative"
@@ -158,7 +158,7 @@
     <div id="page-content">
       
   <main>
-    <div class="h-[72vh] relative px-[6vw]">
+    <div class="h-[56vh] relative px-[6vw]">
       <h1 class="page-title absolute bottom-24">
         Designer at <a href="https://railway.com">Railway</a><br />
         <span class="opacity-15">Curious and stubborn</span>
