--- a/public/about/index.html
+++ b/public/about/index.html
@@ -39,7 +39,7 @@
     <link rel="apple-touch-icon" href="/favicon.svg" />
   </head>
   <body>
-    <div class="fixed top-0 left-0 right-0 z-50 px-[4vw] py-[4vw]">
+    <div class="sticky top-0 left-0 z-50 px-[4vw] py-[4vw]">
       <header class="flex items-center justify-between">
   <div
     class="glass-container flex items-center gap-2 py-3 px-4 rounded-full relative"
@@ -158,7 +158,7 @@
 
     <div id="page-content">
       
-  <div class="long-form p-[8vw] pt-64"><h2 id="hello-im-jitachi">Hello! I&rsquo;m Jitachi</h2>
+  <div class="long-form p-[4vw]"><p class="text-6xl font-[600] tracking-[-0.0375em] sans">Hello, I'm Jitachi</p>
 <p>I like to study the relationship we have with the artifacts we create for ourselves, how they shape the way we think, and how they expand what we believe is possible.</p>
 <p>In simple terms, I&rsquo;m a <strong>designer</strong>. I&rsquo;ve been obsessed with technology, magic, and modding my surroundings since I was a kid. Creating artifacts to help others move forward is my love language.</p>
 <p>I believe that anything a human creates carries traces of its maker: the imprint of time, culture, beliefs, intention, and values. It&rsquo;s like an asynchronous conversation: you can sense what they considered, highlighted, and ignored.</p>
