reduce content width

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -158,7 +158,7 @@
 
     <div id="page-content">
       
-  <div class="long-form p-[4vw]"><p class="text-6xl font-[600] tracking-[-0.0375em] sans">Hello, I'm Jitachi</p>
+  <div class="long-form p-[4vw]"><p class="text-4xl font-[600] tracking-[-0.0250em] sans mb-2 leading-none">Hello, I'm Jitachi</p>
 <p>I like to study the relationship we have with the artifacts we create for ourselves, how they shape the way we think, and how they expand what we believe is possible.</p>
 <p>In simple terms, I&rsquo;m a <strong>designer</strong>. I&rsquo;ve been obsessed with technology, magic, and modding my surroundings since I was a kid. Creating artifacts to help others move forward is my love language.</p>
 <p>I believe that anything a human creates carries traces of its maker: the imprint of time, culture, beliefs, intention, and values. It&rsquo;s like an asynchronous conversation: you can sense what they considered, highlighted, and ignored.</p>
